Created the import page, it's layout, styles and logic. - Added a few modification to the trade-entry.html including: --An edit button so users can edit trades after adding them. --Notfication pop up for successful/unsuccesful trade edit. --Trade edit pop up. -Minor modification to sidebar styles.

--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -16,6 +16,7 @@
   flex-shrink: 0;
   border-right: 1px solid var(--border-color);
   transition: width 0.3s ease, transform 0.3s ease;
+  border-radius: 0 10px 10px 0;
 }
 
 .sidebar.collapsed {
