--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
     --sidebar-active: #e5eeff;
     --success-color: #2E7D32;
     --error-color: #C62828;
+    --footer: #1a2942;
 }
 
 [data-theme="dark"] {
@@ -34,6 +35,7 @@
     --sidebar-active: #233044;
     --success-color: #4CAF50;
     --error-color: #EF5350;
+    --footer: #3d66d9;
 }
 
 * {
@@ -176,7 +178,7 @@ h2 {
 
 /* Footer Styles */
 .footer {
-    background-color: var(--text-color);
+    background-color: var(--footer);
     color: white;
     padding: 3rem 0 0 0;
     margin-top: 4rem;
