--- a/styles/import.css
+++ b/styles/import.css
@@ -479,4 +479,11 @@
         width: 100%;
         justify-content: center;
     }
+
+    #tradeDetails {
+        overflow-x: auto;
+    }
+    .trade-actions button {
+        padding: 0.3rem;
+    }
 }
