--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -10,7 +10,8 @@
   position: relative;
   top: 50px;
   width: 250px;
-  height: calc(70vh - 60px);
+  /* height: calc(70vh - 60px); */
+  height: fit-content;
   background-color: var(--sidebar-bg);
   border-bottom: 1px solid var(--border-color);
   padding: 1rem 0;
